--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2364,6 +2364,15 @@ config FB_JZ4740
 
 source "drivers/video/msm/Kconfig"
 
+config FB_MSM_MDDI_TMD_NT35580
+	depends on FB_MSM
+	tristate "MDDI NT35580 LCD FWVGA Panel"
+	select FB_MSM_MDDI
+	---help---
+	  Support for MDDI NT35580 LCD FWVGA (480x854) panel
+
+
+
 source "drivers/video/omap/Kconfig"
 source "drivers/video/omap2/Kconfig"
 
