Add some more stuff for es209ra. Still requires sectionmismatch to fix before trying anything

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -904,7 +904,7 @@ config QSD_SVS
 
 config QSD_PMIC_DEFAULT_DCDC1
 	int "PMIC default output voltage"
-	depends on (MACH_QSD8X50_SURF || MACH_QSD8X50_FFA || MACH_QSD8X50A_SURF || MACH_QSD8X50A_FFA)
+	depends on ARCH_QSD8X50 
 	default 1250
 	help
 	  This is the PMIC voltage at Linux kernel boot.
